# mote

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh.md  auth.json.example  config.toml.example  keybindings.toml.example
.github/workflows/: rust.yml
agent_tasks/: todo.md
client/: Cargo.toml
client/src/: client.rs  config.rs  llm.rs  main.rs  slash_command.rs  workspace.rs
client/src/tui/: keybinding.rs  mod.rs  render.rs  state.rs
docker/: Dockerfile  README.md  run.sh
prompts/: deepseek.txt  default.txt  ollama.txt
prompts/agents/: build.md  build.toml
prompts/system/: mote.md
protocol/: Cargo.toml
protocol/src/: types.rs
server/: Cargo.toml
server/src/: agent.rs  auth.rs  config.rs  history.rs  main.rs  prompt.rs  session.rs  tools.rs
server/src/llm/: deepseek.rs  github.rs  mod.rs  ollama.rs
