[package]
name = "mote-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP + WebSocket client
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI & config
clap = { version = "4", features = ["derive"] }
dirs = "5"

# Error handling
anyhow = "1"

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = [
  "default-fancy",
] }

# Markdown parsing
pulldown-cmark = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Shared protocol types
marshaling-protocol = { package = "mote-protocol", path = "../protocol" }
