[package]
name = "mote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1"

# Utilities
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
glob = "0.3"
json5 = "0.4"
similar = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Shared protocol types
marshaling-protocol = { package = "mote-protocol", path = "../protocol" }

[dev-dependencies]
tempfile = "3"
